ola-parser/src/testdata/syntaxTests/structs/global_structs_name_clash.sol
struct S {
    u256 a;
}
struct S {
    u256 a;
}
// ----
// DeclarationError 2333: (24-47): Identifier already declared.
